# Master_research

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  memo.txt  mind.md  plot_raw_categorized.py  pyproject.toml
docs/: LEARNING_ROADMAP.md  implementation_plan.md  research_design_roadmap.md  research_plan.md  rl_implementation_guide.md
experiments/dependency_analysis/: 01_cochange_graph.py  (+8 more)
outputs/: dir_class_mapping_K15.json  dir_class_mapping_K30_depth2.json  dir_class_mapping_K50_depth2.json
scripts/: build_activity_events.py  extract_trajectories_cache.sh  prepare_combined_data.py  run_all.sh  run_cross_temporal_dir.sh  run_cross_temporal_dir_v2.sh  run_event_experiment.sh  run_mce_event_irl_variant_single.sh  run_mce_irl_variant_single.sh  run_mce_pipeline.sh  run_pilot_mce_comparison.sh  run_pilot_mce_engagement.sh  run_pilot_mce_event_comparison.sh  run_pilot_mce_event_dev_comparison.sh  run_pilot_mce_event_dev_future_multiclass.sh  run_pilot_mce_event_dev_mixed.sh  run_pilot_mce_event_dev_multiclass.sh  run_pilot_mce_event_pair_future.sh  run_pilot_mce_multiwindow.sh  run_pilot_mce_multiwindow_tmp.sh  run_pilot_mce_multiwindow_v2.sh  run_variant_comparison.sh  run_variant_comparison_combined.sh  run_variant_single.sh  start_pilot.sh  start_pilot_event.sh  start_pilot_event_dev.sh  start_pilot_event_dev_future_multiclass.sh  start_pilot_event_dev_multiclass.sh  start_pilot_event_pair_future.sh  start_pilot_multiwindow.sh
study_materials_post_thesis/: batch_predictor.py  eval_path_prediction.py  eval_rf_hit_rate.py  irl_predictor_v2.py  review_env.py  rf_predictor.py  state_builder.py  train_model.py  train_rl_agent.py
(+805 files in other folders)
