[project]
name = "review-predictor"
version = "0.1.0"
description = "Review continuation prediction using IRL and RL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "stable-baselines3>=2.3.0",
    "scikit-learn>=1.7.0",
    "gymnasium>=0.29.0",
    "pettingzoo>=1.25.0",
    "shimmy>=2.0.0",
    "supersuit>=3.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "loguru>=0.7.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib-venn>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.6",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_predictor"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
